--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,16 @@
-.App {
+.Top {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Bottom {
+  padding-top: 140px ;
+  display: flex;
+  align-items: stretch; 
+  justify-content: flex-start;
+  height: 80vh;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
