--- a/src/Header.css
+++ b/src/Header.css
@@ -5,6 +5,9 @@
     padding: 20px;
     position: fixed;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
 .App-title {
