--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,5 +1,5 @@
 .Sidebar {
-    background-color: black;
+    background-color: rgba(0, 0, 0, .93);
     width: 20em;
     display: flex;
     flex-direction: column;
