--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,15 @@
 }
 
 .Bottom {
-  padding-top: 140px ;
+  padding-top: 110px ;
   display: flex;
   align-items: stretch; 
   justify-content: flex-start;
-  height: 80vh;
-  background-color: #222;
+  height: 90vh;
+  /* background-color: #222; */
+  background-image: url(./csbackground5.jpg);
+  background-size: 100%;
+  background-repeat:no-repeat;
 }
 
 
