--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,12 +1,14 @@
 .Sidebar {
-    background-color: rgba(1, 21, 24, 0.6);
+    /* background-color: rgba(1, 21, 24, 0.6); */
+    background-color:rgba(29, 15, 0, 0.8) ;
     width: 22%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     color: white;
     border-style: groove groove none groove;
-    border-color: rgba(57, 153, 172, 1);
+    /* border-color: rgba(57, 153, 172, 1); */
+    border-color: rgba(230, 96, 7, 1);
     border-width: 8px;
     margin: 7px 7px 0px 7px;
     padding: 4px;
@@ -25,6 +27,8 @@
 .SideInputfield{
     flex-grow: 1;
     border-style: double;
-    border-color:rgba(57, 153, 172, 1);
+    /* border-color:rgba(57, 153, 172, 1); */
+    border-color: rgba(230, 96, 7, 1);
+    background-color: rgba(230, 52, 7, 0.25);
     border-width: 2px;
 }
