Added send buttons and styled them

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   background-image: url(./csbackground5.jpg);
   background-size: 100%;
   background-repeat:no-repeat;
+  font-family: 'Marcellus SC', serif;
 }
 
 
