Added title and styling for Xbot section

--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -47,3 +47,12 @@
     border-color: rgba(85, 27, 2, 1);
     box-shadow: 4px, 4px, rgba(85, 27, 2, 0.9);
 }
+
+.SideId{
+    margin-top: 0px;
+    border-bottom: solid;
+    border-right: solid;
+    border-left: solid;
+    border-radius: 5px;
+    border-color: rgba(230, 96, 7, 0.5);
+}
